--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grain",
   "description": "Grain is an async framework for node.js template languages",
   "tags": ["stack", "template", "async"],
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Tim Caswell <tim@creationix.com>",
   "repository": {
     "type": "git",
@@ -10,8 +10,5 @@
   },
   "bugs": "http://github.com/creationix/grain/issues",
   "engines": ["node >= 0.2.0"],
-  "main": "grain.js",
-  "modules": {
-    "corn": "examples/corn.js"
-  }
+  "main": "grain.js"
 }
